# Cmake_tutorial

./: CMakeLists.txt  build.sh
libs/libPic/: libjpeg.la  libjpeg.so.9
libs/libPic/pkgconfig/: libjpeg.pc
libs/libScan/: libzbar.la  libzbar.so.0.2.0
libs/libScan/pkgconfig/: zbar.pc
src/: CMakeLists.txt  main.c
src/array/: array.c  array.h
src/pointer/: CMakeLists.txt  pointer.c  pointer.h
src/qrcode/: CMakeLists.txt  qrcode.c  qrcode.h
